# deformerPlayground

./: .clang-format  .gitignore  CMakeLists.txt  README.md  requirements-dev.txt  requirements.txt
cmake/defaults/: CXXDefaults.cmake  Options.cmake  Packages.cmake  ProjectDefaults.cmake  Version.cmake  msvcdefaults.cmake
cppDeformer/: CMakeLists.txt  deformer.cpp  plugin.cpp
cppDeformer/include/: deformer.h
data/: delta_model_L1Loss.onnx  delta_model_L1Loss.pth  inflation_model.onnx  torusTest.mb  training_data.pt
onnxDeformer/: AEinflateDeformerONNXTemplate.mel  CMakeLists.txt  onnxDeformer.cpp  plugin.cpp
onnxDeformer/include/: onnxDeformer.h
python/: data_collection.py  train.py  train_model.py
python/onnxDeformer/: data_collection.py  plot.py  train_model.py
tests/python/: test_model.py
